# kbd_calc

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Changelog.md  README.md  design.md  go_macropad.sh  go_picocalc.sh  go_pizero.sh  go_rp2350.sh  requirements.txt
.devin/rules/: cmake-formatting.md  python-formatting.md
.devin/workflows/: update-changelog.md
.github/workflows/: build-and-test.yml
.windsurf/rules/: coding_standards.md
cmake/: dependencies.cmake
cmake/scripts/: embed_json.cmake  version.cmake
data/: MF34.keymap.json  MF34.layers.json  MF34.mapping.json
data/configs/: settings.toml
data/configs/mf/: keyboard.json  keymap.json  layers.json
data/configs/picocalc/: keyboard.json  keymap.json  layers.json  main.json  picocalc.json  picocalc.keymap.json  picocalc.layers.json
data/configs/th33/: keyboard.json
data/hardware/pi_zero/: CMakeLists.txt
data/hardware/picocalc/: CMakeLists.txt
data/hardware/picosdl/: CMakeLists.txt
data/hardware/rp2350/: CMakeLists.txt
data/hardware/sdl/: CMakeLists.txt
data/schemas/: keyboard.json.schema
docs/: README.md  architecture.md  custom_fonts.md  diagrams.md  hardware.md  keyboard_architecture.md  layers.md  math_canvas_refactor_ideas.md  tasks.md  via_json_spec.md
docs/diagrams/: overboard.drawio
docs/plan/: phase_1.md
scripts/: build.sh  generate_key_icons.sh  key_mapper.py  pull_logs.sh  sync_and_build.sh  validate_keyboard_config.py
src/: main.cpp  main_sim.cpp
src/core/: ast.hpp  calc_engine.cpp  calc_engine.hpp  display_controller.cpp  display_controller.hpp  keymap.cpp  keymap.hpp  layer_manager.cpp  layer_manager.hpp  parser.cpp  parser.hpp
src/hal/sdl/: sdl_display.cpp  sdl_display.hpp  sdl_input.hpp
src/overboard/apps/: app_registration.hpp
src/overboard/apps/calculator/: calculator_app.cpp  calculator_app.hpp
src/overboard/apps/ovt_layout_util/: config.cpp  config.hpp  main.cpp
src/overboard/apps/settings/: settings_page.cpp  settings_page.hpp
src/overboard/apps/status/: status_page.cpp  status_page.hpp
src/overboard/apps/test_math_render/: config.cpp  test_math_render.cpp
src/overboard/core/: action_code.cpp  action_code.hpp  calc_engine.cpp  calc_engine.hpp  config.cpp  config.hpp  display_controller.cpp  display_controller.hpp  enums.hpp  expression.cpp  input_key.cpp  input_key.hpp  keyboard_layout.cpp  keyboard_layout.hpp  keymap.cpp  keymap.hpp  layer_manager.cpp  layer_manager.hpp  parser.cpp  parser.hpp  point.hpp  rect.hpp
src/overboard/core/ast/: ast.cpp
src/overboard/core/layout/: engine.cpp  engine.hpp
src/overboard/display/: cursor_renderer.cpp  cursor_renderer.hpp  dirty_region_tracker.cpp  dirty_region_tracker.hpp  history_display.cpp  history_display.hpp  i_canvas.hpp  i_cursor_renderer.hpp  i_display_manager.hpp  i_history_display.hpp  i_layout_engine.hpp  i_renderer.hpp  i_result_display.hpp  result_display.cpp  result_display.hpp
src/overboard/font/: font_metrics.cpp  font_metrics.hpp  font_selector.cpp  font_selector.hpp
src/overboard/gui/: app_menu.cpp  app_menu.hpp  app_registry.hpp  app_view.cpp  app_view.hpp  calculator_app.cpp  calculator_app.hpp  footer_bar.cpp  footer_bar.hpp  function_key_popup.cpp  function_key_popup.hpp  function_menu_popup.cpp  function_menu_popup.hpp  header_bar.cpp  header_bar.hpp  i_app.hpp  i_footer_bar.hpp  i_header_bar.hpp  i_panel.hpp  i_popup.hpp  key_mapping_info.cpp  key_mapping_info.hpp  keyboard_display.cpp  keyboard_display.hpp  keyboard_view.cpp  keyboard_view.hpp  lcd_section.cpp  lcd_section.hpp  lv_font_superscript.c  lvgl_theme.hpp  math_canvas.cpp  math_canvas.hpp  panel_manager.cpp  panel_manager.hpp  settings_page.hpp  status_page.cpp  status_page.hpp
src/overboard/hal/: app_factory.cpp  app_factory.hpp  display_config.hpp  font_5x7.hpp  i_app.hpp  i_display.hpp  i_input.hpp  i_logger.hpp  i_settings_store.hpp  i_system_info.hpp  lcd_config.hpp  settings_store_factory.cpp  settings_store_factory.hpp  settings_tree.cpp  settings_tree.hpp
src/overboard/hal/config/: target.hpp  target_kn34.hpp  target_mf34.hpp  target_pi_zero.hpp  target_sdl.hpp  target_sk30.hpp  target_th33.hpp
src/overboard/hal/kn34/: kn34_app.cpp  kn34_app.hpp  kn34_display.cpp  kn34_display.hpp  kn34_input.cpp  kn34_input.hpp
src/overboard/hal/pi_zero/: app.cpp  app.hpp  display_drm.cpp  display_drm.hpp  input_linux.cpp  input_linux.hpp  settings_store.cpp  settings_store.hpp  system_info.cpp  system_info.hpp
src/overboard/hal/pico/: app.cpp  app.hpp  display.cpp  display.hpp  input.cpp  input.hpp  settings_store.cpp  settings_store.hpp
src/overboard/hal/picocalc/: app.cpp  app.hpp  display.cpp  display.hpp  input.cpp  input.hpp  settings_store.cpp  settings_store.hpp  system_info.cpp  system_info.hpp
src/overboard/hal/sdl/: app.cpp  app.hpp  display.cpp  display.hpp  input.cpp  input.hpp  input_key_mapping.cpp  input_key_mapping.hpp  keyboard_window.cpp  keyboard_window.hpp  keymap.cpp  keymap.hpp  lvgl_keyboard.cpp  lvgl_keyboard.hpp  lvgl_keyboard_display.cpp  lvgl_keyboard_display.hpp  lvgl_keyboard_view.cpp  lvgl_keyboard_view.hpp  lvgl_lcd_display.cpp  (+24 more)
src/overboard/io/: keyboard_config.cpp  keyboard_config.hpp  via_layout.cpp  via_layout.hpp
src/overboard/log/: i_logger.hpp  log_level.cpp  log_level.hpp  stdout_logger.cpp  stdout_logger.hpp
src/overboard/math/: calc_engine.cpp  calc_engine.hpp  expression.cpp  expression.hpp  parser.cpp  parser.hpp
src/tools/: keylogger.cpp  render_layout.cpp
src/utils/: keylogger.cpp
templates/: display_config.hpp.in  embedded_json.hpp.in  version.hpp.in
test/: test_ast.cpp  test_calc_engine.cpp  test_expression.cpp  test_keymap.cpp  test_layout.cpp  test_main.cpp  test_math_render.cpp  test_parser.cpp  test_utils.hpp
test/core/: test_action_code.cpp  test_input_key.cpp  test_keymap.cpp  test_layout.cpp
test/font/: test_font_metrics.cpp
test/hal/: test_settings_tree.cpp
test/math/: test_calc_engine.cpp  test_expression.cpp
test/math/ast/: test_ast.cpp
test/math/layout/: test_layout_engine.cpp  test_math_render.cpp  test_render.cpp
(+35 files in other folders)
